--- a/frontend/crypto-eval/src/index.css
+++ b/frontend/crypto-eval/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  /* background-color: #242424; */
+  background-color: #77c0e1;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
